--- a/item/templates/item/item_list.html
+++ b/item/templates/item/item_list.html
@@ -19,7 +19,7 @@
           <th>Manufacturer</th>
           <th>Supplier</th>
           <th>Description</th>
-          <th class="d-none d-lg-table-cell"></th>
+          <th class="d-none d-lg-table-cell">{% include "partials/tooltray_toggle_icon.html" %}</th>
         </tr>
       </thead>
       <tbody>
@@ -45,14 +45,16 @@
             </td>
             <td class="small">{{ item.description|truncatechars:150 }}</td>
             <td class="d-none d-lg-table-cell">
-              <a href="{% url 'item_update' item.pk %}"><i class="bi bi-pencil-square"></i></a>
-              <a hx-get="{% url 'item_delete' item.pk %}"
-                 hx-trigger="click"
-                 hx-target="#crudModal .modal-content"
-                 hx-swap="innerHTML"
-                 data-bs-toggle="modal"
-                 data-bs-target="#crudModal"
-                 href="javascript:"><i class="bi bi-trash"></i></a>
+              <span class="tooltray-container d-none">
+                <a href="{% url 'item_update' item.pk %}"><i class="bi bi-pencil-square"></i></a>
+                <a hx-get="{% url 'item_delete' item.pk %}"
+                   hx-trigger="click"
+                   hx-target="#crudModal .modal-content"
+                   hx-swap="innerHTML"
+                   data-bs-toggle="modal"
+                   data-bs-target="#crudModal"
+                   href="javascript:"><i class="bi bi-trash"></i></a>
+              </span>
             </td>
           </tr>
         {% endfor %}
