--- a/item/templates/stock/stock_detail.html
+++ b/item/templates/stock/stock_detail.html
@@ -22,44 +22,43 @@
         <span class="fw-bold"><i class="bi bi-info-circle-fill stock-text-color"></i> Stock Details</span>
       </div>
       <div class="panel-content">
-        <table class="table table-sm table-borderless small">
-          <tbody>
-            <tr>
-              <td width="20%" class="text-muted">Item:</td>
-              <td width="30%">
-                <a href="{% url 'item_detail' stock.item.pk %}">{{ stock.item.name }}</a>
-              </td>
-              <td width="20%"  class="text-muted"></td>
-              <td width="30%">
-                <span class="ms-3 badge rounded-pill bg-info"></span>
-              </td>
-            </tr>
-            <tr>
-              <td class="text-muted">Product ID:</td>
-              <td>{{ stock.item.product_id }}</td>
-              <td class="text-muted">Expiry Date:</td>
-              <td>{{ stock.expiry_date|date:"d/m/Y" }}</td>
-            </tr>
-            <tr>
-              <td class="text-muted">Lot Number:</td>
-              <td>{{ stock.lot_number }}</td>
-              <td class="text-muted">Delivery Date:</td>
-              <td>{{ stock.delivery_date|date:"d/m/Y" }}</td>
-            </tr>
-            <tr>
-              <td class="text-muted">Category:</td>
-              <td>
-                <a href="{% url 'category_detail' stock.item.category.pk %}">{{ stock.item.category.name }}</a>
-              </td>
-              <td class="text-muted">Received Condition:</td>
-              <td>{% delivery_condition stock.condition True %}</td>
-            </tr>
-            <tr>
-              <td class="text-muted">Notes:</td>
-              <td colspan="3">{{ stock.comments }}</td>
-            </tr>
-          </tbody>
-        </table>
+        <div class="container">
+          <!-- Item -->
+          <div class="row g-2 mb-2">
+            <div class="col-12 col-sm-3 text-muted">Item:</div>
+            <div class="col-12 col-sm-9">
+              <a href="{% url 'item_detail' stock.item.pk %}">{{ stock.item.name }}</a>
+            </div>
+          </div>
+          <!-- Product ID and Expiry Date -->
+          <div class="row g-2 mb-2">
+            <div class="col-6 col-sm-3 text-muted">Product ID:</div>
+            <div class="col-6 col-sm-3">{{ stock.item.product_id }}</div>
+            <div class="col-6 col-sm-3 text-muted">Expiry Date:</div>
+            <div class="col-6 col-sm-3">{{ stock.expiry_date|date:"d/m/Y" }}</div>
+          </div>
+          <!-- Lot Number and Delivery Date -->
+          <div class="row g-2 mb-2">
+            <div class="col-6 col-sm-3 text-muted">Lot Number:</div>
+            <div class="col-6 col-sm-3">{{ stock.lot_number }}</div>
+            <div class="col-6 col-sm-3 text-muted">Delivery Date:</div>
+            <div class="col-6 col-sm-3">{{ stock.delivery_date|date:"d/m/Y" }}</div>
+          </div>
+          <!-- Category and Received Condition -->
+          <div class="row g-2 mb-2">
+            <div class="col-6 col-sm-3 text-muted">Category:</div>
+            <div class="col-6 col-sm-3">
+              <a href="{% url 'category_detail' stock.item.category.pk %}">{{ stock.item.category.name }}</a>
+            </div>
+            <div class="col-6 col-sm-3 text-muted">Received Condition:</div>
+            <div class="col-6 col-sm-3">{% delivery_condition stock.condition True %}</div>
+          </div>
+          <!-- Notes -->
+          <div class="row g-2">
+            <div class="col-12 col-sm-3 text-muted">Notes:</div>
+            <div class="col-12 col-sm-9">{{ stock.comments }}</div>
+          </div>
+        </div>
       </div>
     </div>
     {# stock info end #}
@@ -150,7 +149,7 @@
               <th width="15%" class="text-muted text-start">Status</th>
               <th width="20%" class="text-muted">Validated</th>
               <th width="20%" class="text-muted">Authorised</th>
-              <th class="text-muted">Validation comments</th>
+              <th class="text-muted d-none d-lg-block">Validation comments</th>
               <th></th>
             </tr>
           </thead>
@@ -184,7 +183,7 @@
                     {% endif %}
                   {% endif %}
                 </td>
-                <td>{{ sv.validation.comments|default_if_none:"" }}</td>
+                <td class="d-none d-lg-block">{{ sv.validation.comments|default_if_none:"" }}</td>
                 <td>
                   <a href="{% url 'validation_update' sv.validation_id %}?next={{ request.path }}"
                      title="Edit the validation"><i class="bi bi-pencil-square"></i></a>
