--- a/item/templates/stock/stock_list.html
+++ b/item/templates/stock/stock_list.html
@@ -15,7 +15,7 @@
       <div class="panel-heading">
         <div class="row">
           <div class="col-lg-3">
-            <a href="{% url 'stock_detail' stock.pk %}"><span class="h5">{{ stock.item.name }}</span></a>
+            <a href="{% url 'stock_detail' stock.pk %}"><span class="fs-6 fs-sm-5">{{ stock.item.name }}</span></a>
             {% if stock.comments %}
               <i class="bi bi-chat-left-dots ps-2 text-danger"
                  title="Comments: {{ stock.comments }}"
@@ -30,16 +30,18 @@
                 <div class="col-3">Quantity</div>
                 <div class="col-2">Location</div>
                 <div class="col-3">Comments</div>
-                <div class="col-auto d-none d-lg-block">
-                 {% include "partials/tooltray_toggle_icon.html" %}
-                </div>
+                <div class="col-auto d-none d-lg-block">{% include "partials/tooltray_toggle_icon.html" %}</div>
               </div>
             </div>
           {% endif %}
           <div class="col flex-grow-1">
             <span class="float-end pe-2 tooltray-container d-none">
-              <a href="{% url 'stock_label_print' stock.pk %}"
-                 title="Print QR Code Stickers"><i class="bi bi-qr-code"></i></a>
+              <a href="#offcanvasPrintSetting"
+                 data-bs-toggle="offcanvas"
+                 hx-target="#offcanvas-form"
+                 hx-get="{% url 'stock_label_print' stock.pk %}"
+                 hx-swap="innerHTML"
+                 title="Print QR Code Stickers"><i class="bi bi-qr-code"></i></a>              
               <a href="{% url 'stock_update' stock.pk %}"
                  title="Edit stock information"><i class="bi bi-pencil-square"></i></a>
               <a hx-get="{% url 'stock_delete' stock.pk %}"
@@ -99,28 +101,27 @@
             {# entries #}
             {% for entry in stock.entries.all %}
               <div class="row text-center align-items-center">
-                <div class="col-1">
+                <div class="col-2 col-lg-1">
                   <a href="#{{ entry.pk }}"
-                     title="More Details: Box #{{ entry.ordinal_number }}"
-                     data-bs-toggle="tooltip">
+                     title="{{ stock.lot_number }}-{{ stock.pk }}-{{ entry.ordinal_number }}">
                     <span class="icon-with-text">
                       <i class="bi bi-box2-fill icon-with-text-icon {% if entry.remaining_quantity == 0 %}text-gray-300{% else %}{% stock_entry_colour entry.ordinal_number %}-text-color{% endif %}"></i>
                       <span class="icon-with-text-low">{{ entry.ordinal_number }}</span>
                     </span>
                   </a>
                 </div>
-                <div class="col-2 small text-center">{{ entry.in_use_date|date:"d/m/Y"|default_if_none:"" }}</div>
-                <div class="col-3">
+                <div class="col-3 col-lg-2 small text-center">{{ entry.in_use_date|date:"d/m/Y"|default_if_none:"" }}</div>
+                <div class="col-7 col-lg-3">
                   {% if entry.remaining_quantity == 0 %}
                     <del>0 {{ entry.remaining_unit }}</del>
                   {% else %}
                     {% include "usage/usage_htmx_updated.html" %}
                   {% endif %}
                 </div>
-                <div class="col-2 small">
+                <div class="col-lg-2 small d-none d-lg-block">
                   <a href="{% url 'location_detail' entry.location.pk %}">{{ entry.location.name }}</a>
                 </div>
-                <div class="col-3">
+                <div class="col-lg-3 d-none d-lg-block">
                   {% if entry.comments|length %}
                     <i class="bi bi-chat-left-dots"
                        data-bs-toggle="tooltip"
@@ -149,3 +150,12 @@
     </div>
   {% endfor %}
 {% endblock panel_content %}
+{% block offcanvas %}
+  <div class="offcanvas offcanvas-start"
+       tabindex="-1"
+       id="offcanvasPrintSetting">
+    <div class="offcanvas-body">
+      <div id="offcanvas-form"></div>
+    </div>
+  </div>
+{% endblock offcanvas %}
