--- a/category/templates/category/category_detail.html
+++ b/category/templates/category/category_detail.html
@@ -11,7 +11,9 @@
     <a href="{% url 'category_update' category.pk %}?next={{ request.path }}"
        title="Update category"
        class="btn btn-sm btn-success">
-      <i class="bi bi-pencil-square"></i> Edit</a>
+      <i class="bi bi-pencil-square"></i>
+      <span class="d-none d-sm-inline">Edit</span>
+    </a>
   </span>
 {% endblock panel_actions %}
 {% block panel_content %}
