--- a/item/templates/inhouse/inhouse_detail.html
+++ b/item/templates/inhouse/inhouse_detail.html
@@ -7,7 +7,9 @@
     <a href="{% url 'inhouse_update' object.pk %}?next={{ request.path }}"
        title="Update inhouse"
        class="btn btn-sm btn-success">
-      <i class="bi bi-pencil-square"></i> Edit</a>
+      <i class="bi bi-pencil-square"></i>
+      <span class="d-none d-sm-inline">Edit</span>
+    </a>
   </span>
 {% endblock panel_actions %}
 {% block panel_content %}
@@ -16,46 +18,36 @@
       <div class="panel-heading d-flex justify-content-between">
         <span class="fw-bold"><i class="bi bi-info-circle-fill inhouse-text-color"></i> Reagent Details</span>
       </div>
-      <div class="panel-content">
-        <table class="table table-sm table-borderless">
-          <tbody>
-            <tr>
-              <td width="15%" class="text-muted">Product ID:</td>
-              <td width="35%">{{ object.product_id }}</td>
-              <td width="15%" class="text-muted">Made:</td>
-              <td width="35%">{{ object.created|date:'d/m/Y' }} {{ object.created_by.initials }}</td>
-            </tr>
-            <tr>
-              <td class="text-muted">Description:</td>
-              <td colspan="3">{{ object.description }}</td>
-            </tr>
-          </tbody>
-        </table>
+      <div class="panel-content px-3">
+        <div class="row g-2 mb-2">
+          <div class="col-6 col-sm-3 text-muted">Product ID:</div>
+          <div class="col-6 col-sm-3">{{ object.product_id }}</div>
+          <div class="col-6 col-sm-3 text-muted">Made:</div>
+          <div class="col-6 col-sm-3">{{ object.created|date:'d/m/Y' }} {{ object.created_by.initials }}</div>
+        </div>
+        <div class="row g-2 mb-2">
+          <div class="col-12 col-sm-3 text-muted">Description:</div>
+          <div class="col-12 col-sm-9">{{ object.description }}</div>
+        </div>
       </div>
     </div>
     <div class="panel mb-4">
       <div class="panel-heading d-flex justify-content-between">
         <span class="fw-bold"><i class="bi bi-card-list text-danger"></i> Components</span>
       </div>
-      <div class="panel-content">
-        <table class="table table-sm table-borderless">
-          <thead>            
-            <th class="text-muted">Item</th>
-            <th class="text-muted">Stock</th>
-            <th class="text-muted">Lot Number</th>
-            <th class="text-muted">Quantity</th>
-          </thead>
-          <tbody>
-            {% for comp in reagent_components.all %}
-              <tr>                
-                <td><a href="{% url 'item_detail' comp.stock.item.pk %}" title="Component item detail">{{ comp.stock.item.name }}</a></td>
-                <td><a href="{% url 'stock_detail' comp.stock.pk %}" title="Component stock detail">{{ comp.stock.ordinal_number }}</a></td>
-                <td>{{ comp.stock.lot_number }}</td>
-                <td>{{ comp.quantity_display }}</td>
-              </tr>
-            {% endfor %}
-          </tbody>
-        </table>
+      <div class="panel-content px-3">
+        <div class="row g-2 mb-2">
+          <div class="col-6 col-sm-6 text-muted fw-bold">Reagent</div>
+          <div class="d-none d-sm-block col-sm-3 text-muted fw-bold">Lot Number</div>
+          <div class="col-6 col-sm-3 text-muted fw-bold text-end text-sm-start">Added</div>
+        </div>
+        {% for c in reagent_components.all %}
+          <div class="row g-2 mb-2">
+            <div class="col-6 col-sm-6"><a href="{% url 'stock_detail' c.stock.pk %}" title="Stock detail">{{ c.stock.item.name }}</a></div>
+            <div class="d-none d-sm-block col-sm-3">{{ c.stock.lot_number }}</div>
+            <div class="col-6 col-sm-3 text-end text-sm-start">{{ c.quantity_display }}</div>
+          </div>
+        {% endfor %}
       </div>
     </div>
   </div>
