--- a/item/templates/inhouse/inhouse_list.html
+++ b/item/templates/inhouse/inhouse_list.html
@@ -9,42 +9,42 @@
   <a href="{% url 'inhouse_create' %}" class="btn btn-sm btn-success"><i class="bi bi-plus-circle"></i> New Reagent</a>
 {% endblock panel_actions %}
 {% block panel_content %}
-  <div class="table-responsive">
-    <table class="table table-sm table-hover">
-      <thead>
-        <tr>
-          <th>Item</th>
-          <th>Product ID</th>
-          <th width="40%">Components</th>
-          <th class="d-none d-lg-table-cell"></th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for reagent in inhouse_reagents %}
-          <tr>
-            <td>
-              <a href="{% url 'inhouse_detail' reagent.pk %}">{{ reagent.name }}</a>
-            </td>
-            <td class="small">{{ reagent.product_id }}</td>
-            <td>
-              {% for comp in reagent.components.all %}
-                {{ comp.item.name }}
-                {% if not forloop.last %},{% endif %}
-              {% endfor %}
-            </td>
-            <td>
-              <a href="{% url 'inhouse_update' reagent.pk %}"><i class="bi bi-pencil-square"></i></a>
-              <a hx-get="{% url 'inhouse_delete' reagent.pk %}"
-                 hx-trigger="click"
-                 hx-target="#crudModal .modal-content"
-                 hx-swap="innerHTML"
-                 data-bs-toggle="modal"
-                 data-bs-target="#crudModal"
-                 href="javascript:"><i class="bi bi-trash"></i></a>
-            </td>
-          </tr>
-        {% endfor %}
-      </tbody>
-    </table>
+  <!-- Headings for larger screens -->
+  <div class="row d-none d-lg-flex g-2 mb-2 fw-bold">
+    <div class="col-md-3">Item</div>
+    <div class="col-md-2">Product ID</div>
+    <div class="col-md-4">Components</div>
+    <div class="col-auto d-none d-lg-block">{% include "partials/tooltray_toggle_icon.html" %}</div>
   </div>
+  {% for reagent in inhouse_reagents %}
+    <!-- Each reagent entry as a row -->
+    <div class="row g-2 mb-2 align-items-center">
+      <!-- Item -->
+      <div class="col-12 col-md-3 mb-2 mb-md-0">
+        <a href="{% url 'inhouse_detail' reagent.pk %}">{{ reagent.name }}</a>
+      </div>
+      <!-- Product ID -->
+      <div class="col-6 col-md-2 mb-2 mb-md-0 small">{{ reagent.product_id }}</div>
+      <!-- Components -->
+      <div class="col-6 col-md-4 mb-2 mb-md-0">
+        {% for comp in reagent.components.all %}
+          {{ comp.item.name }}
+          {% if not forloop.last %},{% endif %}
+        {% endfor %}
+      </div>
+      <!-- Actions -->
+      <div class="col-auto d-none d-lg-block">
+        <span class="tooltray-container d-none">
+          <a href="{% url 'inhouse_update' reagent.pk %}"><i class="bi bi-pencil-square"></i></a>
+          <a hx-get="{% url 'inhouse_delete' reagent.pk %}"
+             hx-trigger="click"
+             hx-target="#crudModal .modal-content"
+             hx-swap="innerHTML"
+             data-bs-toggle="modal"
+             data-bs-target="#crudModal"
+             href="javascript:"><i class="bi bi-trash"></i></a>
+        </span>
+      </div>
+    </div>
+  {% endfor %}
 {% endblock panel_content %}
