--- a/templates/object_detail_base.html
+++ b/templates/object_detail_base.html
@@ -4,23 +4,16 @@
 {% block content %}
   <div class="container">
     <div class="panel">
-      <div class="panel-heading">
-        <div class="row">
-          {% block panel_heading %}
-            <div class="col-12 col-sm-auto">
-              <span class="panel-title fs-6 fs-sm-5">
-                {% block panel_title %}
-                {% endblock panel_title %}
-              </span>
-            </div>
-            <div class="col-12 col-sm text-sm-end">
-              {% block panel_actions %}
-              {% endblock panel_actions %}
-            </div>
-          {% endblock panel_heading %}
-        </div>
-    </div>
-    
+      <div class="panel-heading d-flex justify-content-between align-items-center pe-2">
+        {% block panel_heading %}
+          <span class="panel-title fs-6 fs-sm-5">
+            {% block panel_title %}
+            {% endblock panel_title %}
+          </span>
+          {% block panel_actions %}
+          {% endblock panel_actions %}
+        {% endblock panel_heading %}
+      </div>
       <div class="panel-content">
         {% block panel_content %}
         {% endblock panel_content %}
