--- a/templates/partials/tooltray_toggle_icon.html
+++ b/templates/partials/tooltray_toggle_icon.html
@@ -1,6 +1,7 @@
 <a href="javascript:"
    id="tooltray-trigger"
    class="btn btn-sm"
-   title="Toggle icons">
+   title="Toggle icons"
+   onclick="toggleToolTrayIcons('tooltray-trigger', '.tooltray-container')">
   <i class="bi bi-tools fw-bold text-danger"></i>
 </a>
