--- a/user/templates/user/profile_view.html
+++ b/user/templates/user/profile_view.html
@@ -9,7 +9,9 @@
   <a href="{% url 'user_update' %}?next={{ request.path }}"
      title="Update User Profile"
      class="btn btn-sm btn-success">
-    <i class="bi bi-pencil-square"></i> Edit</a>
+    <i class="bi bi-pencil-square"></i>
+    <span class="d-none d-sm-inline">Edit</span>
+  </a>
 {% endblock panel_actions %}
 {% block panel_content %}
   <div class="pt-3 px-3">
