before modifying inhouse models

--- a/item/templates/inhouse/inhouse_list.html
+++ b/item/templates/inhouse/inhouse_list.html
@@ -3,7 +3,7 @@
   In-house Reagents
 {% endblock title %}
 {% block panel_title %}
-  <i class="bi bi-boxes inhouse-text-color"></i> In-house Reagents
+  <i class="bi bi-bounding-box inhouse-text-color"></i> In-house Reagents
 {% endblock panel_title %}
 {% block panel_actions %}
   <a href="{% url 'inhouse_create' %}" class="btn btn-sm btn-success"><i class="bi bi-plus-circle"></i> New Reagent</a>
