--- a/static/css/reagentree-1.0.css
+++ b/static/css/reagentree-1.0.css
@@ -3,16 +3,17 @@
   --rt-category: #ffc400;
   --rt-company: #0078d4;
   --rt-delivery: #4830d1;
-  --rt-validation: #1ba756;
-  --rt-stock: #ff7c44;
-  --rt-inhouse: #005669;
+  --rt-validation: #1ba756;  
   --rt-location: #66dcc5;
-  --rt-setting: #464742;
+  --rt-setting: #2a4a5a;
   --rt-search: #17a2b8;
   --rt-user: #4e4083;
   --rt-fushsia: #915c83;
   --rt-green20: #498205;
-  --rt-item: #5078c2;
+  --rt-item: #503191;
+  --rt-stock: #ff9000;
+  --rt-inhouse: #dd5030;
+  --rt-inhousestock: #008080;
 }
 
 a {
@@ -185,7 +186,9 @@ a:hover {
 .green20-text-color {
   color: var(--rt-green20);
 }
-
+.inhousestock-text-color {
+  color: var(--rt-inhousestock);
+}
 /* width control */
 
 .max-width-25pc {
