--- a/templates/partials/navbar_menu_start.html
+++ b/templates/partials/navbar_menu_start.html
@@ -15,7 +15,14 @@
         <a href="{% url 'stock_list' %}" class="dropdown-item"><i class="bi bi-boxes stock-text-color"></i> All stock items</a>
       </li>
       <li>
-        <a href="{% url 'stock_validation_list' %}" class="dropdown-item"><i class="bi bi-clipboard validation-text-color"></i> Validation Required</a>
+        <a href="{% url 'stock_validation_list' %}" class="dropdown-item"><i class="bi bi-clipboard validation-text-color"></i> Validation required</a>
+      </li>
+      <li class="dropdown-divider"></li>
+      <li>
+        <a href="{% url 'item_create' %}" class="dropdown-item"><i class="bi bi-box2-fill item-text-color"></i> New items</a>
+      </li>
+      <li>
+        <a href="{% url 'item_list' %}" class="dropdown-item"><i class="bi bi-boxes item-text-color"></i> All items</a>
       </li>
     </ul>
   </li>
@@ -26,24 +33,23 @@
        role="button"
        data-bs-toggle="dropdown"
        aria-expanded="false"
-       href="javascript:"><i class="bi bi-box2-fill item-text-color"></i> Items</a>
+       href="javascript:"><i class="bi bi-box-fill inhousestock-text-color"></i> In-house</a>
     <ul class="dropdown-menu" aria-labelledby="userDropdown">
       <li>
-        <a href="{% url 'item_create' %}" class="dropdown-item"><i class="bi bi-box2-fill item-text-color"></i> New items</a>
+        <a href="#" class="dropdown-item"><i class="bi bi-box-fill inhousestock-text-color"></i> New in-hosuse stock</a>
       </li>
       <li>
-        <a href="{% url 'item_list' %}" class="dropdown-item"><i class="bi bi-boxes item-text-color"></i> All items</a>
+        <a href="#" class="dropdown-item"><i class="bi bi-bounding-box inhousestock-text-color"></i> All in-house stock</a>
+      </li>
+      <li>
+        <a href="#" class="dropdown-item"><i class="bi bi-clipboard-check validation-text-color"></i> Reagent validations</a>
       </li>
       <li class="dropdown-divider"></li>
-      <li class="dropdown-header">In-house reagents</li>
       <li>
-        <a href="{% url 'inhouse_create' %}" class="dropdown-item"><i class="bi bi-box-fill inhouse-text-color"></i> New reagents</a>
+        <a href="{% url 'inhouse_create' %}" class="dropdown-item"><i class="bi bi-box-fill inhouse-text-color"></i> New in-house reagents</a>
       </li>
       <li>
-        <a href="{% url 'inhouse_list' %}" class="dropdown-item"><i class="bi bi-boxes inhouse-text-color"></i> All reagents</a>
-      </li>
-      <li>
-        <a href="{% url 'inhouse_validation_list' %}" class="dropdown-item"><i class="bi bi-clipboard-check-fill validation-text-color"></i> Reagent validations</a>
+        <a href="{% url 'inhouse_list' %}" class="dropdown-item"><i class="bi bi-bounding-box inhouse-text-color"></i> All in-house reagents</a>
       </li>
     </ul>
   </li>
