--- a/item/templates/stock/stock_create.html
+++ b/item/templates/stock/stock_create.html
@@ -12,38 +12,9 @@
     </div>
     <span class="text-danger">{{ form.non_field_errors }}</span>
     {# item search input #}
-    <div id="item-input" class="type-search-input">
-      <div class="input-group mb-3">
-        <span class="input-group-text input-group-text-fw-sm">Item:</span>
-        <input type="text"
-               name="item_query"
-               id="item_search_box"
-               class="form-control"
-               autocomplete="off"
-               required
-               value="{{ item_name|default_if_none:'' }}"
-               placeholder="Start typing to enter an item..."
-               hx-trigger="keyup changed delay:500ms"
-               hx-get="{% url 'item_search' %}"
-               hx-target="#itemSearchResults">
-        <span class="input-group-text">
-          <a href="{% url 'item_create' %}?next={{ request.path }}"
-             class="btn btn-sm btn-light"
-             data-bs-toggle="tooltip"
-             title="Add a new item">
-            <i class="bi bi-plus-circle text-success"></i>
-          </a>
-        </span>
-      </div>
-      <span class="text-danger">{{ form.item.errors }}</span>
-      <div id="itemSearchResults" class="list-group type-search-result"></div>
-      <input type="text"
-             name="item"
-             id="id_item"
-             value="{{ form.item.value|default_if_none:'' }}"
-             hidden>
-    </div>
-    {# item search input end #}
+    {% include "stock/partials/item_search_input.html" %}
+    {# inhouse reagent search input #}
+    {% include "stock/partials/inhouse_search_input.html" %}
     <div class="input-group mb-3">
       <span class="input-group-text input-group-text-fw-sm">{{ form.lot_number.label_tag }}</span>
       {{ form.lot_number }}
@@ -80,39 +51,7 @@
     {{ entries.management_form }}
     {% with entry_form=entries.forms.0 %}
       {# location search input #}
-      <div id="location-input" class="type-search-input">
-        <div class="input-group mb-3">
-          <span class="input-group-text input-group-text-fw-sm">Location</span>
-          <input type="text"
-                 name="location_query"
-                 id="location_search_box"
-                 class="form-control"
-                 required
-                 autocomplete="off"
-                 value="{{ location_name|default_if_none:'' }}"
-                 placeholder="Start typing to enter a location..."
-                 hx-trigger="keyup changed delay:500ms"
-                 hx-get="{% url 'location_search' %}"
-                 hx-target="#locationSearchResults">
-          <span class="input-group-text">
-            <a href="{% url 'location_create' %}?next={{ request.path }}"
-               class="btn btn-sm btn-light"
-               data-bs-toggle="tooltip"
-               title="Add a new location">
-              <i class="bi bi-plus-circle text-success"></i>
-            </a>
-          </span>
-        </div>
-        <span class="text-danger">{{ form.location.errors }}</span>
-        <div id="locationSearchResults" class="list-group type-search-result"></div>
-        <input type="text"
-               name="{{ entry_form.prefix }}-location"
-               id="id_location"
-               value="{{ form.location.value|default_if_none:'' }}"
-               hidden>
-      </div>
-      <span class="text-danger">{{ form.location.errors }}</span>
-      {# location search input end #}
+      {% include "stock/partials/location_search_input.html" %}
     {% endwith %}
   </div>
 {% endblock create_form %}
@@ -125,7 +64,13 @@
       resultsDivId: "itemSearchResults",
       resultClass: "item-search-result-item",
       valueAttribute: "item-pk"
-    },  {
+    }, {
+      searchBoxId: "inhouse_search_box",
+      textInputId: "id_inhouse",
+      resultsDivId: "inhouseSearchResults",
+      resultClass: "inhouse-search-result-inhouse",
+      valueAttribute: "inhouse-pk"
+    }, {
       searchBoxId: "location_search_box",
       textInputId: "id_location",
       resultsDivId: "locationSearchResults",
